# my_3d_manager_app

./: AGENTS.md  README.md  SOLIDWORKS-THUMBNAIL-ISSUE.md  article.md  package-lock.json
.claude/: settings.local.json
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202604210001_initial_schema.py
backend/app/: bootstrap.py  commit_service.py  config.py  database.py  deps.py  main.py  models.py  notification_events.py  preview.py  schemas.py  security.py  storage.py  sw_converter.py
backend/app/routers/: auth.py  comments.py  files.py  notifications.py  projects.py  search.py  snapshots.py
backend/tests/: conftest.py  test_admin_access.py  test_edrawings_preview.py  test_search_comments_notifications.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  i18n.tsx  main.tsx  preferences.ts  styles.css  theme.ts  types.ts  vite-env.d.ts
frontend/src/components/: CommentPanel.tsx  GlobalSearch.tsx  Layout.tsx  MemberPanel.tsx  NotificationBell.tsx  SnapshotPanel.tsx  UploadFile.tsx  UserSettingsButton.tsx  stepPoll.ts
frontend/src/components/FilePreview/: JitViewerPreview.tsx  PreviewModal.tsx  SolidWorksPreview.tsx  StepPreview.tsx  UnsupportedPreview.tsx  index.tsx  utils.ts
frontend/src/pages/: FileHistory.tsx  Login.tsx  ProjectDetail.tsx  Projects.tsx
tools/edrawings-helper/: edrawings_helper.py  install_protocol.ps1
