[project]
name = "zhuiguang-lite-backend"
version = "0.1.0"
description = "追光几何-Lite：机械图纸版本管理与协作平台 MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "bcrypt==4.2.1",
    "email-validator>=2.0",
    "olefile>=0.47",
    "pillow>=10.4",
    "pywin32>=306; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
